<resources>
    <string name="app_name">DigitalHouseFoods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="or">or</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="tony_romas">Tony Roma\'s</string>
    <string name="endereco_tony">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="horario_fechamento">Fecha às 22:00</string>
    <string name="salada_com_molho_gengibre">Salada com molho gengibre</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="descricao_prato">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
</resources>