<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginFragment"
    android:padding="30dp">


    <EditText
        android:id="@+id/edtxtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto"
        />

    <EditText
        android:id="@+id/edtxtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:text="@string/log_in"
        android:textColor="@color/branco"
        android:fontFamily="@font/roboto">

    </Button>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textColor="@color/preto"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/roboto">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/register"
        android:textColor="@color/branco"
        android:background="@color/cinzaRegister"
        android:fontFamily="@font/roboto">

    </Button>



</LinearLayout>


